--- a/angular.json
+++ b/angular.json
@@ -20,12 +20,16 @@
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/ng1/app/js"
             ],
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "src/ng1/app/js/app.js",
+              "src/ng1/app/js/ng1.js"
+            ]
           },
           "configurations": {
             "production": {
